Fix Sidebar overflow, make it scrollable

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -226,7 +226,6 @@ body {
   top: calc(25vh);
 }
 #mylinks {
-  position: fixed;
   bottom: 0;
   display: flex;
   justify-content: center;
